<resources>
    <!--main string-->
    <string name="app_name">Music player</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artist">Artist</string>
    <string name="about_me">About me</string>

    <!--album string-->
    <string name="shuffle">Shuffle</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>


    <string name="close">close</string>
    <string name="open">open</string>
</resources>
