<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_songs"
            android:icon="@drawable/ic_music_note_black_24dp"
            android:title="@string/songs"/>
        <item android:id="@+id/menu_albums"
            android:icon="@drawable/ic_album_black_24dp"
            android:title="@string/albums"/>
        <item android:id="@+id/menu_artists"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/artist"/>
    </group>
    <item android:title="Other">
        <menu>
            <item android:id="@+id/menu_about_author"
                android:icon="@drawable/ic_music_note_black_24dp"
                android:title="@string/about_me"/>
            <item android:id="@+id/menu_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>